# Log_LL

./: .gitignore  .gitmodules  README.md
Log_LL/: CMakeLists.txt  LogLL.cpp  Log_LL.sln  build.bat
Log_LL/Log_LL/: LogLL.cpp  LogLL.h  Log_LL.vcxproj  Log_LL.vcxproj.filters
Log_LL/Log_LL/include/SimpleIni/: ConvertUTF.c  ConvertUTF.h  Simpleini.h
example/: .gitignore  LLLogExample.cpp  LLLogExample.sln  LLLogExample.vcxproj  LLLogExample.vcxproj.filters  test.ini  test2.ini
example/include/: LogLL.h
